<resources>
    <string name="app_name">Ant\'s bike trainer</string>
    <string name="programs">Programs</string>
    <string name="profiles">Profiles</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="channel_not_available">Channel not available</string>
    <string name="channel_other_failure">Other failure</string>
    <string name="channel_search_timeout">Search timeout</string>
    <string name="channel_scan_stop">Searching stopped</string>
    <string name="channel_unknown">Unknown reason</string>
    <string name="scan_start">Searching starting …</string>
    <string name="scan_no_selected_devices">There are no selected devices</string>
    <string name="text_heartrate">Heartrate, BPM</string>
    <string name="text_cadence">Cadence, RPM</string>
    <string name="text_speed">Speed, km/h</string>
    <string name="text_power">Power, W</string>
    <string name="text_distance">Distance, km</string>
    <string name="text_null_value">---</string>
    <string name="profile_setting_age">Age:</string>
    <string name="profile_setting_name">Name:</string>
    <string name="profile_setting_gender">Gender:</string>
    <string name="profile_setting_weight">Weight:</string>
    <string name="profile_setting_height">Height:</string>
    <string name="profile_setting_gender_male">Male</string>
    <string name="profile_setting_gender_female">Female</string>
    <string name="profiles_empty_list">You didn\'t create any profiles.\nPlease click the \"plus\" in top of the screen to create one.</string>
    <string name="programs_title">Programs</string>
    <string name="program_settings_name_hint">Program name</string>
    <string name="program_settings_time">Time (min)</string>
    <string name="program_settings_rest_time">Rest time (min)</string>
    <string name="program_settings_power">Power (W)</string>
    <string name="program_settings_count">Count</string>
    <string name="program_settings_rest_power">Rest power (W)</string>
    <string name="program_settings_max_power">Max. Power (W)</string>
    <string name="program_settings_min_power">Min. Power (W)</string>
    <string name="program_setting_common_time">Common time (min)</string>
    <string name="program_type_segment">Segment</string>
    <string name="program_type_intervals">Intervals</string>
    <string name="program_type_steps">Stairs</string>
    <string name="programs_empty_list">Whoops! \nWe didn\'t find any programs you created.</string>
    <string name="toolbar_devices">Devices:</string>
    <string name="invalid_data">invalid data</string>
    <string name="invalid_program_name">invalid program name</string>
    <string name="program_settings_this_program_is_existed">Program with the same name is exist in database</string>
    <string name="new_profile_failed_to_update">Update of the profile failed. Please try it again</string>
    <string name="new_profile_failed_to_create">New profile creating failed. Please try it again</string>
    <string name="new_profile_existed">Profile with the same name is existed</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="gender_invalid">Don\'t know</string>
    <string name="create_profile_create_new_profile">Create new profile</string>
    <string name="create_profile_username">Username</string>
    <string name="create_profile_age">Age</string>
    <string name="create_profile_height">Height (sm)</string>
    <string name="create_profile_weight">Weight (kg)</string>
    <string name="create_profile_gender">Gender</string>
    <string name="create_profile_male">Male</string>
    <string name="create_profile_female">Female</string>
    <string name="create_profile_create">Create</string>
    <string name="create_program_create">Create</string>
    <string name="create_program_add_segment_question">What kind of segment you want to add?</string>
    <string name="create_program_title">Create new program</string>
    <string name="add_segment_duration">Duration</string>
    <string name="add_segment_add">Add</string>
    <string name="add_segment_power">Power, W</string>
    <string name="add_segment_title">Add segment</string>
    <string name="add_interval_title">Add intervals</string>
    <string name="add_interval_peak_power">Peak power, W</string>
    <string name="add_interval_rest_power">Rest power, W</string>
    <string name="add_interval_peak_power_duration">Peak power duration</string>
    <string name="add_interval_rest_power_duration">Rest power duration</string>
    <string name="add_interval_count_of_repeat">Count of repeat</string>
    <string name="add_interval_add">Add</string>
    <string name="add_stairs_title">Add stairs</string>
    <string name="add_stairs_start_power">Start power, W</string>
    <string name="add_stairs_end_power">End power, W</string>
    <string name="add_stairs_stair_count">Step count (3 min, 20 max)</string>
    <string name="add_stairs_duration">Total duration</string>
    <string name="add_stairs_add">Add</string>
    <string name="workout_chart_empty_message">There is nothing to show :(</string>
    <string name="card_program_total_time">Total time</string>
    <string name="card_program_power_avg">Avg power</string>
    <string name="card_program_power_max">Max power</string>
    <string name="home_empty_programs_title">You don\'t have any workouts yet.</string>
    <string name="home_empty_programs_create_btn_text">Do you want to create a workout?</string>
    <string name="home_your_programs">Your workouts:</string>
    <string name="home_add_new_workout">Add new workout</string>
    <string name="home_app_version">ver. %1$s</string>
    <string name="sensor_heart_rate">Heart Rate Monitor</string>
    <string name="sensor_fitness_equipment">Fitness Equipment</string>
    <string name="sensor_controllable_device">Bike trainer</string>
    <string name="sensor_bike_power">Bike powermeter</string>
    <string name="sensor_speed_cadence">Bike speed/cadence sensor</string>
    <string name="sensor_cadence">Bike cadence sensor</string>
    <string name="sensor_speed">Bike speed sensor</string>
    <string name="card_sensor_number">Number: %1$d</string>
    <string name="scan_devices_searching">Devices searching</string>
    <string name="scan_continue">Continue</string>
    <string name="workout_information_title">Program information</string>
    <string name="workout_information_total_duration">Total duration</string>
    <string name="workout_information_maximum_power">Maximum power, W</string>
    <string name="workout_information_average_power">Average power, W</string>
    <string name="workout_information_edit">Edit</string>
    <string name="workout_information_run_workout">Run workout</string>
    <string name="workout_information_delete">Delete</string>
    <string name="workout_title">%1$s</string>
    <string name="workout_round">Round</string>
    <string name="workout_power">%1$s W</string>
    <string name="workout_heart_rate">%1$s bpm</string>
    <string name="workout_cadence">%1$s rpm</string>
    <string name="workout_speed">%1$s km/h</string>
    <string name="workout_distance">%1$s km</string>
    <string name="workout_remaining_time">%1$s:%2$s:%3$s</string>
    <string name="workout_next_round">Next round:</string>
    <string name="workout_next_round_value">%1$d W / %2$s</string>
    <string name="workout_start">Start</string>
    <string name="workout_pause">Pause</string>
    <string name="workout_stop">Stop</string>
    <string name="workout_continue">Continue</string>
    <string name="workout_slash">/</string>
    <string name="duration_view_zeros">00</string>
    <string name="duration_view_label_hours">h</string>
    <string name="duration_view_label_minutes">m</string>
    <string name="duration_view_label_seconds">s</string>
    <string name="duration_view_separator">:</string>
    <string name="compose_create_profile_title">Create your profile</string>
    <string name="compose_create_profile_description">We use your age, height, and weight to personalize workouts, track your progress, and give accurate performance stats.\nYour data stays secure and helps you get the most out of every ride.</string>
    <string name="compose_create_profile_username">Username</string>
    <string name="compose_create_profile_username_error">Username is not correct</string>
    <string name="compose_create_profile_height">Height, cm</string>
    <string name="compose_create_profile_height_error">Height is not correct</string>
    <string name="compose_create_profile_weight">Weight, kg</string>
    <string name="compose_create_profile_weight_error">Weight is not correct</string>
    <string name="compose_create_profile_age">Age</string>
    <string name="compose_create_profile_age_error">You should be older than 12</string>
    <string name="compose_create_profile_create">Create profile</string>
    <string name="compose_home_title">Hello, %1$s</string>
    <string name="compose_home_workouts">Workouts</string>
    <string name="compose_home_no_workouts">There is no workouts available</string>
    <string name="compose_home_create_workout_1">Create a workout</string>
    <string name="compose_home_not_right_workout">Don\'t have right workout?</string>
    <string name="compose_home_create_workout_2">Create another one</string>
    <string name="compose_home_workout_support_text">%1$d W avg. / %2$s</string>
    <string name="compose_create_workout_title">New workout</string>
    <string name="compose_create_workout_empty_chart">There is nothing to show yet</string>
    <string name="compose_create_workout_power">Power, W</string>
    <string name="compose_create_workout_duration">Duration</string>
    <string name="compose_create_workout_power_rest">Rest power, W</string>
    <string name="compose_create_workout_duration_rest">Rest duration</string>
    <string name="compose_create_workout_repeats">Repeats</string>
    <string name="compose_create_workout_name">Workout name</string>
    <string name="compose_create_workout_add_step">Add step</string>
    <string name="compose_create_workout_add_interval">Add interval</string>
    <string name="compose_create_workout_remove_last_step">Remove last step</string>
    <string name="compose_create_workout_save">Save workout</string>
    <string name="compose_settings_title">Settings</string>
    <string name="compose_settings">Settings</string>
    <string name="compose_settings_username_label">Username</string>
    <string name="compose_settings_age_label">Age</string>
    <string name="compose_settings_circumference_label">Wheel circumference</string>
    <string name="compose_settings_dark_mode">Dark mode</string>
    <string name="compose_settings_profile">Profile</string>
    <string name="circumference_700x23">700c x 23mm</string>
    <string name="circumference_700x25">700c x 25mm</string>
    <string name="circumference_700x28">700c x 28mm</string>
    <string name="circumference_700x32">700c x 32mm</string>
    <string name="circumference_700x35">700c x 35mm</string>
    <string name="circumference_700x38">700c x 38mm</string>
    <string name="circumference_700x44">700c x 44mm</string>
    <string name="circumference_700x50">700c x 50mm</string>
    <string name="circumference_unknown">Not selected</string>
    <string name="compose_workout_info_time">Time: %1$s</string>
    <string name="compose_workout_info_average_power">Average power: %1$s W</string>
    <string name="compose_workout_info_max_power">Max power: %1$s W</string>
    <string name="compose_workout_info_search_sensors">Search sensors</string>
    <string name="compose_workout_info_delete">Delete</string>
    <string name="compose_workout_info_run">Run</string>
    <string name="compose_workout_info_description">This indoor cycling workout lasted %1$s, with an average power of %2$d W and a peak power of %3$d W.</string>
</resources>