<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_pre_regular"
            android:src="@drawable/ic_arrow_back_32"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

    <TextView
            android:id="@+id/title_tv"
            style="@style/Title2.onSurface"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:text="@string/add_segment_title"
            app:layout_constraintBottom_toBottomOf="@id/back_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/back_btn"
            app:layout_constraintTop_toTopOf="@id/back_btn" />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/power_til"
            style="@style/TextInputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            android:hint="@string/add_segment_power"
            app:layout_constraintTop_toBottomOf="@id/title_tv">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/power_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_text_field_rounded_small"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLines="1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.antsfamily.biketrainer.ui.createprogram.view.DurationView
            android:id="@+id/duration_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/power_til"
            app:title="@string/add_segment_duration" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/add_btn"
            style="@style/Body1.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_large"
            android:layout_marginVertical="@dimen/margin_medium"
            android:background="@drawable/bg_button_rounded_small"
            android:text="@string/add_segment_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/duration_view"
            app:layout_constraintVertical_bias="1" />

</androidx.constraintlayout.widget.ConstraintLayout>
