<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_bottom_sheet_dialog">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_pre_regular"
                android:src="@drawable/ic_arrow_back_32"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

        <TextView
                android:id="@+id/title_tv"
                style="@style/Title2.onSurface"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_large"
                android:text="@string/add_interval_title"
                app:layout_constraintBottom_toBottomOf="@id/back_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/back_btn"
                app:layout_constraintTop_toTopOf="@id/back_btn" />

        <ScrollView
                android:id="@+id/content_sv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/margin_pre_regular"
                android:fillViewport="true"
                android:overScrollMode="never"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_tv">

            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/peak_power_til"
                        style="@style/TextInputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_large"
                        android:layout_marginTop="@dimen/margin_small"
                        android:hint="@string/add_interval_peak_power"
                        app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/peak_power_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_text_field_rounded_small"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"
                            android:nextFocusForward="@id/rest_power_et" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.antsfamily.biketrainer.ui.createprogram.view.DurationView
                        android:id="@+id/peak_power_duration_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_large"
                        android:layout_marginTop="@dimen/margin_small"
                        app:layout_constraintTop_toBottomOf="@id/peak_power_til"
                        app:title="@string/add_interval_peak_power_duration" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/rest_power_til"
                        style="@style/TextInputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_large"
                        android:layout_marginTop="@dimen/margin_regular"
                        android:hint="@string/add_interval_rest_power"
                        app:layout_constraintTop_toBottomOf="@id/peak_power_duration_view">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/rest_power_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_text_field_rounded_small"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:maxLines="1"
                            android:nextFocusForward="@id/times_et" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.antsfamily.biketrainer.ui.createprogram.view.DurationView
                        android:id="@+id/rest_power_duration_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_large"
                        android:layout_marginTop="@dimen/margin_small"
                        app:layout_constraintTop_toBottomOf="@id/rest_power_til"
                        app:title="@string/add_interval_rest_power_duration" />

                <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/times_til"
                        style="@style/TextInputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_large"
                        android:layout_marginTop="@dimen/margin_small"
                        android:hint="@string/add_interval_count_of_repeat"
                        app:layout_constraintTop_toBottomOf="@id/rest_power_duration_view">

                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/times_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_text_field_rounded_small"
                            android:imeOptions="actionDone"
                            android:inputType="number"
                            android:maxLines="1" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                        android:id="@+id/add_btn"
                        style="@style/Body1.Bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_large"
                        android:layout_marginVertical="@dimen/margin_medium"
                        android:background="@drawable/bg_button_rounded_small"
                        android:text="@string/add_interval_add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/times_til"
                        app:layout_constraintVertical_bias="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
